--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jest": "^29.0.3"
   },
   "scripts": {
-    "start": "node src/App.js",
+    "start": "node src/index.js",
     "test": "jest --detectOpenHandles --watch"
   },
   "repository": {
